src/test/ui/rfc-2632-const-trait-impl/cross-crate.stock.stderr
error[E0015]: cannot call non-const fn `<NonConst as MyTrait<Const>>::func` in constant functions
  --> $DIR/cross-crate.rs:15:14
   |
LL |     NonConst.func();
   |              ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `<Const as MyTrait<Const>>::func` in constant functions
  --> $DIR/cross-crate.rs:17:11
   |
LL |     Const.func();
   |           ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
